Adcionado descrição do projeto

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
    <h1>Página do projeto python</h1>
    <h2>Luiz Veloso</h2>
+   <p>O projeto é para aprender o uso do django como servidor backend</p>
 </body>
 </html>
